--- a/membership-signup.html
+++ b/membership-signup.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +11,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <title>Membership Sign Up</title>
 </head>
-
 <body>
     <!-- header section -->
     <section id="header-section">
@@ -93,9 +91,9 @@
     <!-- footer section -->
     <footer class="py-5 text-white" style="background-color: #DA952C;">
         <div class="container">
-            <div class="footer-title d-flex mb-5">
-                <img class="img-fluid me-4" src="img/shoptacle-logo-white.jpg" alt="Shoptacle">
-                <p class="mb-0 fs-1 pt-1">Shop<span class="fw-bold">tacle</span></p>
+            <div class="footer-title d-flex mb-5 align-items-center">
+                <img class="img-fluid me-4" src="img/shoptacle-logo-white.png" alt="Shoptacle">
+                <p class="mb-0 fs-1">Shop<span class="fw-bold">tacle</span></p>
             </div>
             <div class="footer-navigation">
                 <div class="row">
