--- a/membership-signup.html
+++ b/membership-signup.html
@@ -27,7 +27,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <a href="membership-signin.html" class="btn btn-primary px-5 py-2" style="background-color: #DA952C; border-color: #DA952C;" type="submit">Login</a>
+                            <a href="user-signin.html" class="btn btn-primary px-5 py-2" style="background-color: #DA952C; border-color: #DA952C;" type="submit">Login</a>
                         </ul>
                     </div>
                 </div>
