--- a/membership-signup.html
+++ b/membership-signup.html
@@ -35,7 +35,7 @@
         </div>
     </section>
     <!-- membership form section -->
-    <section id="membership-form-section" style="margin: 80px 0 20em;">
+    <section id="membership-form-section" style="margin: 40px 0 5em;">
         <div class="container">
             <div class="membership-bg h-auto">
                 <div class="membership-form px-lg-5 py-lg-5 px-md-5 py-md-5 px-sm-4 py-sm-4 px-4 py-5">
@@ -68,7 +68,11 @@
                                 <div class="col-lg-12">
                                     <div class="gender-form">
                                         <div class="mb-4">
-                                            <input type="text" class="form-control ps-3 py-2" id="member-gender" placeholder="Gender" style="border-radius: 0;" required>
+                                            <select class="ps-3 py-2 border-0" id="member-gender">
+                                                <option selected disabled>Gender :</option>
+                                                <option value="Male">Male</option>
+                                                <option value="Female">Female</option>
+                                              </select>
                                         </div>
                                     </div>
                                 </div>
@@ -152,13 +156,13 @@
                             <div class="footer-socials mt-4">
                                 <div class="row">
                                     <div class="col-lg-4 col-md-4 col-sm-4 col-2">
-                                        <img src="img/footer-facebook.png" class="img-fluid" alt="Facebook">
+                                        <img src="img/footer-facebook.png" class="img-fluid" style="width: 70%;" alt="Facebook">
                                     </div>
                                     <div class="col-lg-4 col-md-4 col-sm-4 col-2">
-                                        <img src="img/footer-twitter.png" class="img-fluid" alt="Twitter">
+                                        <img src="img/footer-twitter.png" class="img-fluid" style="width: 70%;" alt="Twitter">
                                     </div>
                                     <div class="col-lg-4 col-md-4 col-sm-4 col-2">
-                                        <img src="img/footer-instagram.png" class="img-fluid" alt="Instagram">
+                                        <img src="img/footer-instagram.png" class="img-fluid" style="width: 70%;" alt="Instagram">
                                     </div>
                                 </div>
                             </div>
