bg: fixed a bug

--- a/membership-signup.html
+++ b/membership-signup.html
@@ -69,7 +69,7 @@
                                     <div class="gender-form">
                                         <div class="mb-4">
                                             <select class="ps-3 py-2 border-0" id="member-gender">
-                                                <option selected disabled>Gender :</option>
+                                                <option selected disabled>Gender</option>
                                                 <option value="Male">Male</option>
                                                 <option value="Female">Female</option>
                                               </select>
