--- a/membership-signup.html
+++ b/membership-signup.html
@@ -72,6 +72,7 @@
                                                 <option selected disabled>Gender</option>
                                                 <option value="Male">Male</option>
                                                 <option value="Female">Female</option>
+                                                <option value="Female">Prefer not to say</option>
                                               </select>
                                         </div>
                                     </div>
