--- a/membership-signup.html
+++ b/membership-signup.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <!-- bootstrap icon cdn -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <!-- google fonts cdn -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>Membership Sign Up</title>
 </head>
 <body>
@@ -150,7 +154,7 @@
                         </div>
                         <div class="nav-content">
                             <ul class="list-unstyled">
-                                <li style="font-size: 13px;"><i class="bi bi-geo-alt-fill me-2 fs-4"></i><p class="mb-0 d-inline-block">24, Admiralty way, Lekki, Lagos, Nigeria</p></li>
+                                <li style="font-size: 12px;"><i class="bi bi-geo-alt-fill me-2 fs-4"></i><p class="mb-0 d-inline-block">24, Admiralty way, Lekki, Lagos, Nigeria</p></li>
                                 <li style="font-size: 13px;"><i class="bi bi-telephone-fill me-2 fs-4"></i>+234|812-8555-785</li>
                                 <li style="font-size: 13px;"><i class="bi bi-envelope-fill me-2 fs-4"></i>shoptacle@gmail.com</li>
                             </ul>
