added the proper linking to other pages of the site

--- a/about-us-loggedin.html
+++ b/about-us-loggedin.html
@@ -38,7 +38,7 @@
                                 <a class="nav-link text-black" href="shoptacle-product-loggedin">PRODUCTS</a>
                             </li>
                             <li class="nav-item me-lg-4">
-                                <a class="nav-link text-black" href="shoptacle-collection.html">COLLECTION</a>
+                                <a class="nav-link text-black" href="shoptacle-collection-loggedin.html">COLLECTION</a>
                             </li>
                             <li class="nav-item me-lg-4">
                                 <a class="nav-link active border-3 border-bottom" style="color: #DA952C; border-color: #DA952C !important; border-width: 10% !important;" aria-current="page" href="#">ABOUT</a>
