--- a/user-signin.html
+++ b/user-signin.html
@@ -94,7 +94,7 @@
                         </div>
                         <div class="nav-content">
                             <ul class="list-unstyled">
-                                <li><a class="text-decoration-none text-white" href="#" style="opacity: 0.6;">About Us</a></li>
+                                <li><a class="text-decoration-none text-white" href="about-us-loggedout.html" style="opacity: 0.6;">About Us</a></li>
                                 <li><a class="text-decoration-none text-white" href="#" style="opacity: 0.6;">Customer Service</a></li>
                                 <li><a class="text-decoration-none text-white" href="#" style="opacity: 0.6;">Local Stores</a></li>
                                 <li><a class="text-decoration-none text-white" href="#" style="opacity: 0.6;">Privacy & Cookies</a></li>
